syntax = "proto3";

option csharp_namespace = "ProjectRunners.Common.Protos";

service RunnersControllerGrpc{
  rpc SetState(RunnerStateContractGrpc) returns (NoResponseGrpc);
  rpc HandleScreenshot(ScreenshotContract) returns (NoResponseGrpc);
}

enum RunnerStateGrpc{
    Running = 0;
    Waiting = 1;
    Disconnected = 2;
}

message RunnerStateContractGrpc{
  int64 runnerId = 1;
  RunnerStateGrpc state = 2;
}

message NoResponseGrpc{}

message ScreenshotContract{
  int64 runnerId = 1;
  bytes payload = 2;
}